# hell_heli_project

./: .gitignore  mission.sqm  pyproject.toml  readme.md  steam_desc.md
hell_heli_refactored/: dsp_dialog_functions.sqf  dsp_functions.sqf  dsp_main.sqf  init.sqf  overview.paa
images/: beketov.paa
maps/Altis/: loadscreen.paa  mission.sqm  readme_altis.md
maps/Beketov/: mission.sqm
maps/Malden/: loadscreen.paa  mission.sqm
maps/SefrouRamal/: description.ext  loadscreen.paa  mission.sqm  readme_sefrouramal.md
maps/Stratis/: loadscreen.paa  mission.sqm  readme_stratis.md
maps/Tanoa/: loadscreen.paa  mission.sqm  readme_altis.md
maps/cam_lao_nam/: loadscreen.paa  mission.sqm  readme_cam_lao_nam.md
maps/cfb_moosehead/: loadscreen.paa  mission.sqm  readme_moosehead.md
maps/enoch/: loadscreen.paa  mission.sqm  readme_livonia.md
maps/gm_weferlingen_summer/: loadscreen.paa  mission.sqm
maps/gm_weferlingen_winter/: loadscreen.paa  mission.sqm
maps/lythium/: loadscreen.paa  mission.sqm  readme_lythium.md
maps/reshmaan/: loadscreen.paa  mission.sqm  readme_reshmaan.md
maps/stozec/: loadscreen.paa  mission.sqm
maps/vn_khe_sanh/: loadscreen.paa  mission.sqm  readme_khe_sanh.md
maps/vt7/: loadscreen.paa  mission.sqm  readme_virolahti.md
scripts/: arma_tools.py  convert_to_paa.py  produce_images.py  setup_missions.py
